--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,13 @@
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,maximum-scale=2">
+    <link id="page_favicon" href="/favicon.ico" rel="icon" type="image/x-icon" />
     <link rel="stylesheet" type="text/css" media="screen" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
+    <meta property="og:title" content="NIMDA Group Ltd. — российская ИТ-компания, владеющая одноимённой системой в Сети и интернет-порталом.">
+    <meta property="og:type" content="website">
+    <meta property="og:site_name" content="NIMDA Group Ltd.">
+    <meta property="og:locale" content="ru_RU">
+    <meta property="og:description" content="NIMDA Group Ltd. — российская ИТ-компания, владеющая одноимённой системой в Сети и интернет-порталом.">
 
 {% seo %}
   </head>
@@ -42,18 +48,18 @@
         {% if site.github.is_project_page %}
         <p class="copyright">{{ site.title | default: site.github.repository_name }} maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
         {% endif %}
-        <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
+        <p>© 1981-2018 <a href="https://nimda.pro">NIMDA Group Ltd.</a></p>
       </footer>
     </div>
 
     {% if site.google_analytics %}
+      <script async src="https://www.googletagmanager.com/gtag/js?id=UA-55487430-12"></script>
       <script>
-        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-        ga('create', '{{ site.google_analytics }}', 'auto');
-        ga('send', 'pageview');
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-55487430-12');
       </script>
     {% endif %}
   </body>
